# jpeg-ml-ls

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ai_logic.hpp  base_med_logic.hpp  bit_stream.hpp  config.hpp  deterministic_best_logic.hpp  jpegls_ai.hpp  loco_i.hpp  med_predictor.hpp  non_ai_best_logic.hpp  paeth_predictor.hpp  predictor.hpp  random_ai_logic.hpp  selected_one_logic.hpp
include/ai/: 2_layer_chooser_ai_logic.hpp  2_layer_chooser_with_all_ai_logic.hpp  3_layer_chooser_ai_logic.hpp  3_layer_chooser_with_all_ai_logic.hpp  cnn_chooser_ai_logic.hpp  cnn_chooser_with_all_ai_logic.hpp
include/predictors/: asymmetric_texture_predictor.hpp  average_left_top_predictor.hpp  blender_weights.hpp  dpcm_predictor.hpp  gradient_predictor.hpp  harmonic_mean_predictor.hpp  horizontal_sharp_edge_predictor.hpp  jpeg_5_predictor.hpp  jpeg_6_predictor.hpp  left_predictor.hpp  max_predictor.hpp  med_predictor.hpp  mid_range_predictor.hpp  min_predictor.hpp  mlp_5x5_predictor.hpp  mlp_5x5_weights.hpp  mlp_predictor.hpp  mlp_weights.hpp  multiplicative_predictor.hpp  neural_blender_predictor.hpp  paeth_predictor.hpp  planar_balanced_predictor.hpp  predictor.hpp  predictor_factory.hpp  strict_median_predictor.hpp  top_left_predictor.hpp  top_predictor.hpp  vertical_sharp_edge_predictor.hpp
include/utils/: benchmark_utils.hpp  training_utils.hpp
scripts/: train_blender.py  train_mlp.py
src/: bit_stream.cpp  jpegls_ai.cpp  loco_i.cpp  main.cpp  train_2_layer_chooser_with_all_ai_logic.cpp  train_2_layer_fc_logic_model.cpp  train_3_layer_chooser_with_all_ai_logic.cpp  train_3_layer_fc_logic_model.cpp  train_and_benchmark.cpp  train_cnn_chooser_with_all_ai_logic.cpp  train_cnn_predictor_logic_model.cpp
src/ai/: 2_layer_chooser_ai_logic.cpp  2_layer_chooser_with_all_ai_logic.cpp  3_layer_chooser_ai_logic.cpp  3_layer_chooser_with_all_ai_logic.cpp  cnn_chooser_ai_logic.cpp  cnn_chooser_with_all_ai_logic.cpp
src/utils/: benchmark_utils.cpp  training_utils.cpp
test_data/: cat.raw  to_raw.py
